# Mdpeek

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  index.html  install.ps1  package-lock.json  package.json  vite.config.js
.tauri/: mdpeek.key.pub
releases/: README.md  latest.json  mdpeek-0.0.3-setup.exe.sig  mdpeek-0.0.4-setup.exe.sig  mdpeek-0.0.5-setup.exe.sig  mdpeek-0.0.6-setup.exe.sig  mdpeek-0.0.7-setup.exe.sig  mdpeek-0.0.8-setup.exe.sig  mdpeek-0.0.9-setup.exe.sig  mdpeek-0.1.0-setup.exe.sig  mdpeek-0.1.1-setup.exe.sig  mdpeek-0.1.2-setup.exe.sig  mdpeek-0.1.3-setup.exe.sig  mdpeek-0.1.4-setup.exe.sig  mdpeek-0.10.0-setup.exe.sig  mdpeek-0.10.1-setup.exe.sig  mdpeek-0.11.0-setup.exe.sig  mdpeek-0.11.1-setup.exe.sig  mdpeek-0.11.13-setup.exe.sig  mdpeek-0.11.14-setup.exe.sig  mdpeek-0.11.15-setup.exe.sig  mdpeek-0.12.0-setup.exe.sig  mdpeek-0.13.0-setup.exe.sig  mdpeek-0.14.0-setup.exe.sig  mdpeek-0.15.0-setup.exe.sig  mdpeek-0.15.1-setup.exe.sig  mdpeek-0.15.2-setup.exe.sig  mdpeek-0.15.3-setup.exe.sig  mdpeek-0.15.4-setup.exe.sig  mdpeek-0.15.5-setup.exe.sig  mdpeek-0.15.6-setup.exe.sig  mdpeek-0.15.7-setup.exe.sig  mdpeek-0.15.8-setup.exe.sig  mdpeek-0.16.0-setup.exe.sig  mdpeek-0.16.2-setup.exe.sig  mdpeek-0.16.3-setup.exe.sig  mdpeek-0.16.4-setup.exe.sig  mdpeek-0.16.5-setup.exe.sig  mdpeek-0.16.6-setup.exe.sig  mdpeek-0.16.7-setup.exe.sig  (+53 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: file-assoc.nsh
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  watcher.rs
(+53 files in other folders)
