[package]
name = "mdpeek"
version = "0.11.1"
description = "A lightweight Markdown viewer"
authors = ["Sanket Patel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdpeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Custom URL scheme (mdpeek://) for invite-link collaboration. Registers the
# scheme with Windows at install time and emits `open-url` events to the
# frontend when the app is launched via such a link.
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
notify = "6"
# File operations in the explorer (Delete → Recycle Bin, recursive copy/move).
# Small footprint, no extra native deps on Windows (uses IShellDispatch via COM
# which ships with the OS).
trash = "5"
# Real PTY for the integrated terminal (v0.23.0). On Windows uses ConPTY
# (Win10 1809+); on Unix uses openpty. Cross-platform, wezterm-authored.
portable-pty = "0.8"

